--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "client",
-    "slug": "client",
+    "name": "nutshell",
+    "slug": "nutshell",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
