--- a/app.json
+++ b/app.json
@@ -18,10 +18,11 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
+      "permissions": [],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF",
-        "permissions": []
+        "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
