--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-image-auto-height": "^1.0.4",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-linear-gradient": "~11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
