--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
