--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-spinkit": "^1.5.2",
     "react-native-image-auto-height": "^1.0.4",
     "react-native-web": "0.17.1"
   },
