--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.64.3",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-image-auto-height": "^1.0.4",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
